Домашняя работа-11 Код приведён в соответствие с PEP8

--- a/templates/list.html
+++ b/templates/list.html
@@ -5,9 +5,13 @@
     <title>Home page</title>
   </head>
   <body>
-  <h1>Все кандидаты</h1>
-  {% for candidate in candidates %}
-  <p><a href="//localhost:5000/candidates/{{candidate.id}}"> {{candidate.name}} </a></p>
-  {% endfor %}
+    <h1>Все кандидаты</h1>
+    {% for candidate in candidates %}
+    <p>
+      <a href="//localhost:5000/candidates/{{candidate.id}}">
+        {{candidate.name}}
+      </a>
+    </p>
+    {% endfor %}
   </body>
 </html>
