--- a/templates/card.html
+++ b/templates/card.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Имя кандидата - {{candidates.name}}</h1>
     <p>Позиция кандидата - {{candidates.position}}</p>
-    <img src={{candidates.picture}} width=200/>
+    <img src="{{candidates.picture}}" width="200" />
     <p>Навыки - {{candidates.skills}}</p>
   </body>
 </html>
